# License

./: CMakeLists.txt
common/: License.cpp  LicenseUtils.cpp  ostype.h
src/: CMakeLists.txt  main.cpp
src/common/: License.h  LicenseUtils.cpp  LicenseUtils.h  LicenseUtils_demo.cpp  LicenseUtils_demo.h  ostype.h  wmic.cpp  wmic.h
src/test/: license_check.cpp
